nadoin #1.1 메인페이지

--- a/nadoinclient/styles/globals.css
+++ b/nadoinclient/styles/globals.css
@@ -14,3 +14,28 @@ a {
 * {
   box-sizing: border-box;
 }
+
+li,
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  padding: 0;
+  margin: 0;
+}
+
+small {
+  font-size: 10px;
+}
+
+button {
+  all: unset;
+}
