--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  background: #f7fafd;
+  overflow-x: hidden;
   margin-top: 45px;
 }
 
@@ -36,12 +36,23 @@ p {
   margin: 0;
 }
 
+.desc {
+  font-family: "NEXON Lv1 Gothic OTF Bold";
+}
 small {
   font-size: 10px;
 }
 
 button {
   all: unset;
+}
+
+@font-face {
+  font-family: "NEXON Lv1 Gothic OTF Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
